@@ -2,7 +2,6 @@ package com.pwr_zpi.reservespotapi.entities.restaurant.service;
 
 import com.pwr_zpi.reservespotapi.entities.reservation.Reservation;
 import com.pwr_zpi.reservespotapi.entities.reservation.ReservationRepository;
-import com.pwr_zpi.reservespotapi.entities.reservation.Reservation;
 import com.pwr_zpi.reservespotapi.entities.restaurant.Restaurant;
 import com.pwr_zpi.reservespotapi.entities.restaurant.RestaurantRepository;
 import com.pwr_zpi.reservespotapi.entities.restaurant.dto.CreateRestaurantDto;
@@ -10,27 +9,21 @@ import com.pwr_zpi.reservespotapi.entities.restaurant.dto.RestaurantDto;
 import com.pwr_zpi.reservespotapi.entities.restaurant.dto.RestaurantSearchDto;
 import com.pwr_zpi.reservespotapi.entities.restaurant.dto.UpdateRestaurantDto;
 import com.pwr_zpi.reservespotapi.entities.restaurant.mapper.RestaurantMapper;
-import com.pwr_zpi.reservespotapi.entities.review.Review;
 import com.pwr_zpi.reservespotapi.entities.restaurant_table.RestaurantTable;
 import com.pwr_zpi.reservespotapi.entities.restaurant_table.RestaurantTableRepository;
 import com.pwr_zpi.reservespotapi.entities.tag.Tag;
 import com.pwr_zpi.reservespotapi.entities.tag.TagRepository;
-import com.pwr_zpi.reservespotapi.entities.users.User;
 import com.pwr_zpi.reservespotapi.entities.users.UserRepository;
 import com.pwr_zpi.reservespotapi.service.AiQueryParserService;
-import jakarta.persistence.criteria.Predicate;
 import jakarta.persistence.criteria.Join;
-import java.util.HashSet;
-
+import jakarta.persistence.criteria.Predicate;
+import lombok.RequiredArgsConstructor;
 import org.springframework.data.domain.PageRequest;
 import org.springframework.data.domain.Pageable;
-import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
-import java.util.List;
-import java.util.Optional;
-import java.util.Set;
+import java.util.*;
 import java.util.stream.Collectors;
 
 @Service
@@ -130,61 +123,83 @@ public class RestaurantService {
         return restaurantRepository.count();
     }
 
-    public List<RestaurantDto> getRecommendations(Long userId) {
-        int limit = 5;
-        Pageable pageable = PageRequest.of(0, limit);
-
-        User user = userRepository.findById(userId).orElse(null);
-        if (user == null) {
-            return restaurantRepository.findTopRated(pageable)
-                    .stream().map(restaurantMapper::toDto).toList();
-        }
-
-        Set<Long> preferredTagIds = new HashSet<>();
-        Set<Long> visitedRestaurantIds = new HashSet<>();
-
-        if (user.getReservations() != null) {
-            for (Reservation res : user.getReservations()) {
-                Restaurant r = res.getTable().getRestaurant();
-                visitedRestaurantIds.add(r.getId());
-                r.getTags().forEach(tag -> preferredTagIds.add(tag.getId()));
-            }
-        }
-
-        if (user.getReviews() != null) {
-            for (Review review : user.getReviews()) {
-                Restaurant r = review.getRestaurant();
-                visitedRestaurantIds.add(r.getId());
-                r.getTags().forEach(tag -> preferredTagIds.add(tag.getId()));
-            }
-        }
-
-        if (preferredTagIds.isEmpty()) {
-            return restaurantRepository.findTopRated(pageable)
-                    .stream().map(restaurantMapper::toDto).toList();
-        }
-
-        List<Restaurant> recommendations;
-        if (visitedRestaurantIds.isEmpty()) {
-            recommendations = restaurantRepository.findByTagsIn(preferredTagIds, pageable);
-        } else {
-            recommendations = restaurantRepository.findByTagsInAndIdNotIn(preferredTagIds, visitedRestaurantIds, pageable);
-        }
-
-        if (recommendations.size() < limit) {
-            List<Restaurant> topRated = restaurantRepository.findTopRated(pageable);
-            for (Restaurant r : topRated) {
-                if (recommendations.size() >= limit) break;
-                if (!recommendations.contains(r) && !visitedRestaurantIds.contains(r.getId())) {
-                    recommendations.add(r);
-                }
-            }
-        }
-
-        return recommendations.stream()
-                .map(restaurantMapper::toDto)
-                .toList();
-    }
+//    public List<RestaurantDto> getRecommendations(Long userId) {
+//        int limit = 5;
+//        Pageable pageable = PageRequest.of(0, limit);
+//        List<Restaurant> recommendations = new ArrayList<>();
+//        Set<Long> visitedRestaurantIds = new HashSet<>();
+//        Set<Long> preferredTagIds = new HashSet<>();
+//
+//        if (userId != null) {
+//            userRepository.findById(userId).ifPresent(user -> {
+//                if (user.getReservations() != null) {
+//                    user.getReservations().forEach(res -> {
+//                        visitedRestaurantIds.add(res.getTable().getRestaurant().getId());
+//                        res.getTable().getRestaurant().getTags().forEach(tag -> preferredTagIds.add(tag.getId()));
+//                    });
+//                }
+//                if (user.getReviews() != null) {
+//                    user.getReviews().forEach(review -> {
+//                        visitedRestaurantIds.add(review.getRestaurant().getId());
+//                        review.getRestaurant().getTags().forEach(tag -> preferredTagIds.add(tag.getId()));
+//                    });
+//                }
+//            });
+//        }
+//
+//        if (!preferredTagIds.isEmpty()) {
+//            List<Restaurant> tagBased;
+//            if (visitedRestaurantIds.isEmpty()) {
+//                tagBased = restaurantRepository.findByTagsIn(preferredTagIds, pageable);
+//            } else {
+//                tagBased = restaurantRepository.findByTagsInAndIdNotIn(preferredTagIds, visitedRestaurantIds, pageable);
+//            }
+//            recommendations.addAll(tagBased);
+//        }
+//
+//        if (recommendations.size() < limit) {
+//            Pageable topRatedPage = PageRequest.of(0, limit * 2);
+//            List<Restaurant> topRated = restaurantRepository.findTopRated(topRatedPage);
+//
+//            for (Restaurant r : topRated) {
+//                if (recommendations.size() >= limit) break;
+//                if (!recommendations.contains(r) && !visitedRestaurantIds.contains(r.getId())) {
+//                    recommendations.add(r);
+//                }
+//            }
+//        }
+//
+//        if (recommendations.size() < limit) {
+//            int needed = limit - recommendations.size();
+//
+//            Set<Long> excludedIds = recommendations.stream()
+//                    .map(Restaurant::getId)
+//                    .collect(Collectors.toSet());
+//            excludedIds.addAll(visitedRestaurantIds);
+//
+//            List<Restaurant> randomRestaurants;
+//
+//            if (excludedIds.isEmpty()) {
+//                randomRestaurants = restaurantRepository.findRandom(needed);
+//            } else {
+//                randomRestaurants = restaurantRepository.findRandomNotIn(excludedIds, needed);
+//            }
+//
+//            recommendations.addAll(randomRestaurants);
+//        }
+//
+//        if (recommendations.size() < limit) {
+//            int needed = limit - recommendations.size();
+//            Set<Long> currentRecIds = recommendations.stream().map(Restaurant::getId).collect(Collectors.toSet());
+//
+//            List<Restaurant> anyRandoms = restaurantRepository.findRandomNotIn(currentRecIds, needed);
+//            recommendations.addAll(anyRandoms);
+//        }
+//
+//        return recommendations.stream()
+//                .map(restaurantMapper::toDto)
+//                .toList();
+//    }
 
     public List<RestaurantDto> searchRestaurants(RestaurantSearchDto searchDto) {
         return restaurantRepository.findAll().stream()
@@ -197,64 +212,138 @@ public class RestaurantService {
     }
 
     public List<RestaurantDto> searchRestaurantsWithAi(RestaurantSearchDto searchDto) {
+        List<Long> matchingIds = aiQueryParser.findMatchingRestaurantIds(searchDto.getQuery());
 
-        AiQueryParserService.AiParsedCriteria aiCriteria = aiQueryParser.parseQuery(searchDto.getQuery());
-
-        Set<Long> finalTagIds = new HashSet<>();
-        if (searchDto.getTagIds() != null) {
-            finalTagIds.addAll(searchDto.getTagIds());
-        }
-        if (aiCriteria.getImpliedTags() != null && !aiCriteria.getImpliedTags().isEmpty()) {
-            Set<Tag> foundTags = tagRepository.findByNameIn(aiCriteria.getImpliedTags());
-            foundTags.forEach(tag -> finalTagIds.add(tag.getId()));
+        if (matchingIds.isEmpty()) {
+            return List.of();
         }
 
-        double finalMinRating = 0.0;
+        List<Restaurant> restaurants = restaurantRepository.findAllById(matchingIds);
+
+        if (searchDto.getCity() != null && !searchDto.getCity().isBlank()) {
+            restaurants = restaurants.stream()
+                    .filter(r -> r.getCity() != null && r.getCity().equalsIgnoreCase(searchDto.getCity()))
+                    .collect(Collectors.toList());
+        }
+
         if (searchDto.getMinRating() != null) {
-            finalMinRating = searchDto.getMinRating();
+            restaurants = restaurants.stream()
+                    .filter(r -> r.getAverageRating() != null && r.getAverageRating() >= searchDto.getMinRating())
+                    .collect(Collectors.toList());
         }
-        if (aiCriteria.getImpliedMinRating() != null) {
-            finalMinRating = Math.max(finalMinRating, aiCriteria.getImpliedMinRating());
-        }
-
-        String searchText = (aiCriteria.getImpliedQuery() != null) ? aiCriteria.getImpliedQuery() : searchDto.getQuery();
-
-        double finalMinRating1 = finalMinRating;
-        List<Restaurant> restaurants = restaurantRepository.findAll((root, query, cb) -> {
-            Predicate predicate = cb.conjunction();
-
-            if (searchDto.getCity() != null && !searchDto.getCity().isEmpty()) {
-                predicate = cb.and(predicate, cb.equal(root.get("city"), searchDto.getCity()));
-            }
-
-            if (finalMinRating1 > 0.0) {
-                predicate = cb.and(predicate, cb.greaterThanOrEqualTo(root.get("averageRating"), finalMinRating1));
-            }
-
-            if (searchDto.getMaxRating() != null) {
-                predicate = cb.and(predicate, cb.lessThanOrEqualTo(root.get("averageRating"), searchDto.getMaxRating()));
-            }
-
-            if (searchText != null && !searchText.isEmpty()) {
-                predicate = cb.and(predicate, cb.or(
-                        cb.like(cb.lower(root.get("name")), "%" + searchText.toLowerCase() + "%"),
-                        cb.like(cb.lower(root.get("description")), "%" + searchText.toLowerCase() + "%")
-                ));
-            }
-
-            if (!finalTagIds.isEmpty()) {
-                Join<Restaurant, Tag> tagJoin = root.join("tags");
-                predicate = cb.and(predicate, tagJoin.get("id").in(finalTagIds));
-                query.groupBy(root.get("id"));
-                query.having(cb.equal(cb.count(root.get("id")), (long) finalTagIds.size()));
-            }
-
-            return predicate;
-        }, Pageable.unpaged()).getContent();
 
         return restaurants.stream()
                 .map(restaurantMapper::toDto)
-                .collect(Collectors.toList());
+                .toList();
+    }
+
+    public List<String> getAllCities() {
+        return restaurantRepository.findAllCities();
+    }
+
+    public List<RestaurantDto> getRecommendations(Long userId, String city) {
+        int limit = 5;
+        Pageable pageable = PageRequest.of(0, limit);
+
+        List<Restaurant> recommendations = new ArrayList<>();
+        Set<Long> visitedRestaurantIds = new HashSet<>();
+        Set<Long> preferredTagIds = new HashSet<>();
+
+        if (userId != null) {
+            userRepository.findById(userId).ifPresent(user -> {
+                if (user.getReservations() != null) {
+                    user.getReservations().forEach(res -> {
+                        visitedRestaurantIds.add(res.getTable().getRestaurant().getId());
+                        res.getTable().getRestaurant().getTags().forEach(tag -> preferredTagIds.add(tag.getId()));
+                    });
+                }
+                if (user.getReviews() != null) {
+                    user.getReviews().forEach(review -> {
+                        visitedRestaurantIds.add(review.getRestaurant().getId());
+                        review.getRestaurant().getTags().forEach(tag -> preferredTagIds.add(tag.getId()));
+                    });
+                }
+            });
+        }
+
+        // 2. STRATEGIA A: PO TAGACH (Content-Based)
+        if (!preferredTagIds.isEmpty()) {
+            List<Restaurant> tagBased;
+            if (city != null && !city.isBlank()) {
+                if (visitedRestaurantIds.isEmpty()) {
+                    tagBased = restaurantRepository.findByTagsInAndCity(preferredTagIds, city, pageable);
+                } else {
+                    tagBased = restaurantRepository.findByTagsInAndIdNotInAndCity(preferredTagIds, visitedRestaurantIds, city, pageable);
+                }
+            } else {
+                if (visitedRestaurantIds.isEmpty()) {
+                    tagBased = restaurantRepository.findByTagsIn(preferredTagIds, pageable);
+                } else {
+                    tagBased = restaurantRepository.findByTagsInAndIdNotIn(preferredTagIds, visitedRestaurantIds, pageable);
+                }
+            }
+            recommendations.addAll(tagBased);
+        }
+
+        if (recommendations.size() < limit) {
+            Pageable topRatedPage = PageRequest.of(0, limit * 2);
+            List<Restaurant> topRated;
+
+            if (city != null && !city.isBlank()) {
+                topRated = restaurantRepository.findTopRatedByCity(city, topRatedPage);
+            } else {
+                topRated = restaurantRepository.findTopRated(topRatedPage);
+            }
+
+            for (Restaurant r : topRated) {
+                if (recommendations.size() >= limit) break;
+                if (!recommendations.contains(r) && !visitedRestaurantIds.contains(r.getId())) {
+                    recommendations.add(r);
+                }
+            }
+        }
+
+        if (recommendations.size() < limit) {
+            int needed = limit - recommendations.size();
+            Set<Long> excludedIds = recommendations.stream()
+                    .map(Restaurant::getId)
+                    .collect(Collectors.toSet());
+            excludedIds.addAll(visitedRestaurantIds);
+
+            List<Restaurant> randomRestaurants;
+
+            if (city != null && !city.isBlank()) {
+                if (excludedIds.isEmpty()) {
+                    randomRestaurants = restaurantRepository.findRandomByCity(city, needed);
+                } else {
+                    randomRestaurants = restaurantRepository.findRandomNotInAndCity(excludedIds, city, needed);
+                }
+            } else {
+                if (excludedIds.isEmpty()) {
+                    randomRestaurants = restaurantRepository.findRandom(needed);
+                } else {
+                    randomRestaurants = restaurantRepository.findRandomNotIn(excludedIds, needed);
+                }
+            }
+            recommendations.addAll(randomRestaurants);
+        }
+
+        if (recommendations.size() < limit) {
+            int needed = limit - recommendations.size();
+            Set<Long> currentRecIds = recommendations.stream().map(Restaurant::getId).collect(Collectors.toSet());
+
+            List<Restaurant> anyRandoms;
+            if (city != null && !city.isBlank()) {
+                anyRandoms = restaurantRepository.findRandomNotInAndCity(currentRecIds, city, needed);
+            } else {
+                anyRandoms = restaurantRepository.findRandomNotIn(currentRecIds, needed);
+            }
+            recommendations.addAll(anyRandoms);
+        }
+
+        return recommendations.stream()
+                .map(restaurantMapper::toDto)
+                .toList();
     }
 
     private boolean matchesQuery(Restaurant restaurant, String query) {
